overhauled population dynamics and laws in database

--- a/api/country/models/country.settings.json
+++ b/api/country/models/country.settings.json
@@ -20,6 +20,9 @@
     "admin": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "ethnicities": {
+      "collection": "ethnicity"
     }
   }
 }
