--- a/api/block/models/block.settings.json
+++ b/api/block/models/block.settings.json
@@ -17,20 +17,14 @@
     "country": {
       "model": "country"
     },
-    "start_party_1": {
-      "model": "party-template"
-    },
-    "start_party_2": {
-      "model": "party-template"
-    },
-    "ethnicity": {
-      "model": "ethnicity"
-    },
     "government_support": {
       "type": "decimal"
     },
     "demographics": {
       "collection": "population-attribute"
+    },
+    "highest_support": {
+      "type": "biginteger"
     }
   }
 }
