--- a/api/promise/models/promise.settings.json
+++ b/api/promise/models/promise.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "promises",
   "info": {
-    "name": "Promise"
+    "name": "Promise",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -15,6 +16,9 @@
     },
     "law": {
       "model": "law"
+    },
+    "country_law": {
+      "model": "country-law"
     }
   }
 }
